--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,6 @@
-/* body{
+body{
     background-image: url(./img/Fondo/imagendefondo.jpg);
-} */
+}
 .d-block{
     width: 500px;
     height: 500px;
